--- a/LIgnorance/src/main/AndroidManifest.xml
+++ b/LIgnorance/src/main/AndroidManifest.xml
@@ -61,8 +61,9 @@
         android:name=".application.IgnoranceApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/mybackupscheme"
-        android:icon="@mipmap/ic_logo"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Base">
 
